# CardG

./: CMakeLists.txt
CardG/: CMakeLists.txt  CardG.cpp  CardG.h  Client.cpp  Client.h  Main.cpp  Player.cpp  PlayerG.h  Server.cpp  Server.h
CardG/cmake/modules/: findSDL.cmake
